public/style.css
body, * {
  color: #353535 !important;
}

/*
.header {
  background: -moz-linear-gradient(top, rgba(250, 250, 246, 1) 0%, rgba(250, 250, 246, 1) 1%, rgba(250, 250, 246, 1) 70%, rgba(250, 250, 246, 0) 100%);
  background: -webkit-linear-gradient(top, rgba(250, 250, 246, 1) 0%, rgba(250, 250, 246, 1) 1%, rgba(250, 250, 246, 1) 70%, rgba(250, 250, 246, 0) 100%);
  background: linear-gradient(to bottom, rgba(250, 250, 246, 1) 40%, rgb(241, 241, 241) 31%, rgb(241, 241, 241) 61%, rgba(250, 250, 246, 0) 94%);
  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fafaf6', endColorstr='#00fafaf6', GradientType=0);
  height: 60px;
  position: fixed;
  width: 100%;
  margin-left: -8px;
  margin-top: -40px;
}
*/

header {
  margin-bottom: 20px;
}

.container {
  max-width: 98%;
  width: 100%;
  height: 100%;
  margin: auto;
  text-align: center;
  overflow-y: scroll !important;
}

.info {
  max-width: 80%;
  margin: 0 auto;
  padding-bottom: 20px;
}

.info--text {
  font-size: 14px;
  line-height: 1.35rem;
}

hr {
  display: block;
  margin-block-start: 0.5em;
  margin-block-end: 0.5em;
  margin-inline-start: auto;
  margin-inline-end: auto;
  width: 100%;
  border-width: 1px;
}

h1 {
  font-family: 'VT323', serif;
  font-weight: lighter;
  font-size: 130px;
  letter-spacing: -7.4px;
  text-align: center;
  text-transform: uppercase;
  padding: 20px;
  padding-top: 0px;
  color: #ffffff;
  margin-block-end: 0px;
  margin-block-start: 0px;
  height: 110px;
  color: transparent !important;
  -webkit-text-stroke-width: 1.4px;
  -webkit-text-stroke-color: black;
}

.nav-parent {
  margin: auto;
  text-align: center;
  margin-bottom: 5px;
}

h2 {
  font-family: 'Overpass Mono', serif;
  font-size: 30px;
  letter-spacing: -2.5px;
  color: #ffffff;
  padding: 10px 0px 0px;
  width: 100%;
  font-weight: bold;
  line-height: 35px;
  box-sizing: border-box;
  text-align: left;
  margin-bottom: 0px;
}

h3 {
  font-family: 'Overpass Mono', sans-serif;
  font-size: 18px;
  font-weight: 600;
  line-height: 1.2;
  letter-spacing: -1px;
  text-align: left;
  color: #fff;
  padding: 5px;
}

p {
  font-family: 'Karla', sans-serif;
  font-size: 18px;
  line-height: 1.33;
  letter-spacing: 0.2px;
  color: #ffffff;
  text-align: left;
  padding: 5px;
}

i {
  padding: 5px;
  font-style: normal;
  font-size: 16px;
}

button:focus {
  outline: 0;
}

.main {
  display: flex;
  padding: 20px;
  justify-content: space-between;
  border-top: solid 1px #605360;
  border-bottom: solid 1px #605360;
  opacity: 1;
  transition: opacity 1s;
  overflow-y: scroll;
}

.articlerow:last-child {
  margin-bottom: 20px;
  border-bottom: 0px;
}

.article {
  width: 100%;
  padding-top: 40px;
  text-align: left;
}

.img-cont {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: space-around;
  align-items: self-start;
  max-height: 620px;
}

.storyimage {
  max-width: 100%;
  min-width: 100%;
  min-height: 100%;
  /* border: 5px solid #787bff; */
  box-shadow: 1px 1px 23px 0px;
  box-sizing: border-box;
}

.search-container {
  width: 100%;
  margin: 0 auto;
  text-align: center;
}

input#searchInput {
  background: transparent;
  /* border-bottom: 1px solid black; */
  color: white;
  font-family: 'Overpass Mono';
  font-size: 15px;
  outline: none;
  /* border-radius: 20px; */
  box-sizing: border-box;
  height: 33px;
  padding-left: 0px;
  border-top: none;
  border-left: none;
  border-right: none;
  margin-bottom: 20px;
  width: 40%;

}
input#searchInput:focus {
    border-bottom: 2px solid #52e268;
}

#pastQueries {
  font-family: 'Karla';
  padding: 10px;
  text-align: center;
  margin-left: -14px;
}

span.individual-search-val {
  border: 1px solid black;
  padding: 6px;
  border-radius: 20px;
  color: white;
  display: inline-flex;
  line-height: 20px;
  margin: 4px;
  justify-content: space-around;
}


button {
  font-family: 'Overpass Mono', sans-serif;
  font-size: 15px;
  font-weight: 600;
  letter-spacing: -0.5px;
  text-align: center;
  color: #424040 !important;
  background-color: transparent;
  border: none;
  margin-right: 20px;
  max-width: 200px;
  height: 30px;
}

button#search {
  border: 1px solid;
  background: transparent;
  padding: 0px;
  width: 120px;
  border-radius: 20px;
  /* background: white; */
  text-align: center;
  height: 34px;
  font-weight: bold;
  color: #ffffff;
  font-family: 'Overpass Mono';
  /* margin-top: 0px; */
}

#nav-menu {
  animation-duration: .3s;
  -webkit-animation-duration: .3s;
}

#nav-menu button:hover, #nav-menu button:focus {
    box-shadow: 0px 3px 0px #fdff53;
    transition: .3s;
    cursor: crosshair;

}

#trending-shown {
  /* display: none; */
}

.introText {
  text-align: center;
}

input[type="search"] {
  border: 1px;
  background: transparent;
  border-bottom: 1px solid black;
  width: 320px;
  font-size: 14px;
  outline: none
}

.article a {
  text-decoration: none;
  font-family: 'Overpass Mono', serif;
  font-size: 14px;
  line-height: 4.3;
  font-weight: bold;
  letter-spacing: 0.2px;
  text-align: left;
  color: #ffffff;
  padding: 10px 0px 4px;
  margin-bottom: 0px;
}

.article a:hover, .article a:focus {
  /* color: #5bf192 !important; */
  cursor: crosshair;
  box-shadow: 0px 3px 0px #5bf192;
  transition: all .4s;
}

@media (max-width: 1200px) {

  header h1:nth-child(1) {
      margin-block-end: -90px;
      letter-spacing: -0.4px;
  }

  .container {
    max-width: 90%;
    width: 100%;
    margin: auto;
  }

  .articlerow {
    display: flex;
    flex-direction: row;
    align-items: left;
    text-align: left;
  }

  .article {
    width: 100%;
  }

  .img-cont {
    width: 98%;
    flex-direction: row;
  }

  form {
    display: flex;
    flex-direction: column;
    align-items: center;
  }

  h1, h2 {
    font-size: 24px;
  }
}

@media (max-width: 480px) {
  .img-cont {
    flex-direction: column;
  }

  .storyimage {
    width: 100%;
    height: auto;
  }

  button {
    margin-top: 10px;
  }
}

@media (max-width: 840px) {
  .storyimage {
    min-width: 100%;
  }
}

.menu-container {
  display: inline-block;
  cursor: pointer;
}

@media (min-width: 1200px) {
  .menu-container {
    display: none;
  }
}

@media (max-width: 1200px) {
  .nav-menu {
    display: none;
  }
  #searchInput, #search{
    display: none;
  }
  #searchInput {
    margin-left: 50px;
  }
}

.show {
  display: inline-block !important;
}

.bar1, .bar2, .bar3 {
  width: 35px;
  height: 1px;
  background-color: #333;
  margin: 10px 0;
  transition: 0.4s;
}

.change .bar1 {
  -webkit-transform: rotate(-45deg) translate(-9px, 6px);
  transform: rotate(-45deg) translate(-9px, 6px);
}

.change .bar2 {
  opacity: 0;
}

.change .bar3 {
  -webkit-transform: rotate(45deg) translate(-8px, -8px);
  transform: rotate(45deg) translate(-8px, -8px);
}



@-webkit-keyframes zoomIn {
  from {
    opacity: 0;
    -webkit-transform: scale3d(0.3, 0.3, 0.3);
    transform: scale3d(0.3, 0.3, 0.3);
  }

  50% {
    opacity: 1;
  }
}

@keyframes zoomIn {
  from {
    opacity: 0;
    -webkit-transform: scale3d(0.3, 0.3, 0.3);
    transform: scale3d(0.3, 0.3, 0.3);
  }

  50% {
    opacity: 1;
  }
}

.zoomIn {
  -webkit-animation-name: zoomIn;
  animation-name: zoomIn;
  animation: zoomIn;
}

.animated {
  -webkit-animation-duration: .3s;
  animation-duration: .3s;
  -webkit-animation-fill-mode: both;
  animation-fill-mode: both;
}


.col {
  width: 100%;
  vertical-align: top;
  display: inline-block;
}

.articlerow {
  display: inline-block;
  width: 300px;
  padding: 20px;
  padding-top: 30px;
}

.img-cont:hover {
    /* transition: 0.2s; */
    transition: .2s;
    opacity: .9;
}

span.grid-toggle {
    font-family: 'Overpass Mono';
    font-size: 12px;
    font-weight: bolder;
    text-align: right;
    color: transparent !important;
    -webkit-text-stroke-width: .1px;
    -webkit-text-stroke-color: black;
}

.category-nav {
    max-width: 100%;
    margin: 0 auto;
    display: block;
    text-align: left;
}

.category {
    text-align: center !important;
    margin-right: 50px;
    font-size: 30px !important;
    box-sizing: border-box;
    line-height: 41px;
    color: #5d5d5d !important;
    font-family: 'Overpass Mono';
    padding-right: 0px;
}


.category-toggle span {
    font-family: 'VT323';
    font-size: 32px;
    display: inline-block;
    width: 278px;
    color: #434141 !important;
    line-height: 18px;
    padding: 9px;
    /* padding-right: 77px; */
    padding-left: 39px;
}


  .sub-nav-menu {
    display: flex;
    background: transparent;
    /* border: 1px solid black; */
    height: 40px;
    /* border-radius: 20px; */
    margin-bottom: -10px;
    margin-left: 7px;
    text-align: center;
  }

  @media (max-width:1200px) {
    .category {
    font-size: 15px !important;
}

    .category-toggle span {
    padding-left: 0px;
}

.category-nav {
    max-width: 100%;
    margin: 0 auto;
    display: block;
    text-align: center;
    margin-left: 20px;
}

.sub-nav-menu {
  margin-left: 10px;
  display: block;
  margin-top: -40px;
  margin-bottom: 100px;
}
.sub-nav-menu button {
  margin-left: 20px;
}

}

span.grid-toggle:hover {
    box-shadow: 0px 3px 0px #787bff;
    transition: .3s;
    cursor: crosshair;
}

